# backend/openapi/openapi.json
@@ -2883,13 +2883,19 @@
       },
       "StageUpdateBody": {
         "properties": {
+          "is_season": {
+            "default": true,
+            "title": "Is Season",
+            "type": "boolean"
+          },
           "name": {
             "title": "Name",
             "type": "string"
           }
         },
         "required": [
-          "name"
+          "name",
+          "is_season"
         ],
         "title": "StageUpdateBody",
         "type": "object"
@@ -2907,6 +2913,11 @@
           },
           "is_active": {
             "title": "Is Active",
+            "type": "boolean"
+          },
+          "is_season": {
+            "default": true,
+            "title": "Is Season",
             "type": "boolean"
           },
           "name": {
@@ -2930,6 +2941,7 @@
           "name",
           "created",
           "is_active",
+          "is_season",
           "id",
           "stage_items"
         ],
@@ -6491,6 +6503,22 @@
             "schema": {
               "title": "Tournament Id",
               "type": "integer"
+            }
+          },
+          {
+            "in": "query",
+            "name": "name",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Name"
             }
           },
           {
